# remote-work

./: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  welcome.html
.cargo/: config.toml
src/: admin.html  file-manager.html  main.ts  network-stats.ts  network-usage.ts  styles.css  welcome.js
src-tauri/: Cargo.toml  mysql_schema.sql  tauri.conf.json
src-tauri/src/: database.rs  lib.rs  main.rs
